# SemLab

./: .gitignore  Evaluation-System-Guide.md  README.md  chunking.py  config.py  embedding.py  pdf_chunker.py  pyproject.toml
chunking/: __init__.py  pdf_chunker.py
docs/: EXTENSION.md
embedding/: __init__.py  embedding_manager.py
evaluation/: metrics.py
scripts/: ingest_to_faiss.py  ingest_to_milvus.py  query_vectordb.py  run_chunking.py  run_milvus_ingestion.py  run_milvus_query.py  run_query_milvus.py
utils/: logger.py
vector_db/: ___init__.py  milvus_connection.py  milvus_ingestion.py  milvus_query.py
