[project]
name = "retrieval-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "pymilvus>=2.6.2",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
]
